--- a/blog/package.json
+++ b/blog/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "core-js": "^2.6.5",
     "element-ui": "^2.15.9",
+    "marked": "^4.0.18",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
